# rust-lambda-s3

./: Cargo.toml  README.md
src/: main.rs
