[package]
name = "rust-lambda-s3"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
anyhow = "1.0.75"
async-compression = { version = "0.4.2", features = ["tokio", "zstd"] }

lambda_runtime = "0.8.1"
rusoto_core = { version = "0.48.0", default-features = false, features = [
    "rustls",
] }
rusoto_s3 = { version = "0.48.0", default-features = false, features = [
    "rustls",
] }
serde = "1.0.136"
serde_json = "1.0.105"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
] }
